fixed image spacing need to work on spacing after h3

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -3,11 +3,19 @@ img.selfie {
     padding-right:15px;
 }
 
+h1 {
+    font-family : 'Courier New', Courier, serif;
+    font-size : 40px;
+    padding: 0px;
+    margin: 0 0 0 0;
+}
+
 h2 {
     font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
     font-weight: 900;
     padding-bottom: 0px;
+    margin: 10 0 0 0;
 }
 
 h3 {
@@ -15,6 +23,8 @@ h3 {
     font-size: 20px;
     font-weight: 800;
     padding-bottom: 0px;
+
+    margin: 10 0 0 0;
 }
 
 p {
@@ -24,15 +34,22 @@ p {
     font-weight:300;
 }
 
-table {
-    margin: 0 0 0 0;
-    padding-left:0px;
-    padding-bottom: 0px;
-    width: 85%;
+table,tbody {
+    margin: 0 0 0 20;
+    padding-left:20px;
+    padding-bottom: 15px;
+    padding-top: 0px;
+    width: 90%;
+}
+
+
+extra-padding-left-small {
+    padding-left: 20px;
 }
 
 text-align-right {
     text-align: right;
+    padding-right:10px;
 }
 
 ul {
